# Ultracopier

./: .gitignore  .travis.yml  AuthPlugin.cpp  AuthPlugin.h  CHANGELOG  CHANGELOG.txt  CLAUDE.md  CMakeLists.txt  CliParser.cpp  CliParser.h  CompilerInfo.h  CopyEngineManager.cpp  CopyEngineManager.h  CopyListener.cpp  CopyListener.h  Core.cpp  Core.h  DebugEngine.cpp  DebugEngine.h  DebugEngineMacro.h  DebugModel.cpp  Environment.h  EventDispatcher.cpp  EventDispatcher.h  ExtraSocket.cpp  ExtraSocket.h  FAQ.md  FacilityEngine.cpp  FacilityEngine.h  FacilityEngineVersion.cpp  GlobalClass.cpp  GlobalClass.h  HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  InternetUpdater.cpp  InternetUpdater.h  LanguagesManager.cpp  LanguagesManager.h  LocalListener.cpp  (+63 more)
android-sources/: AndroidManifest.xml  build.sh
catchcopy-windows-explorer-plugin/: CatchCopy.cpp  CatchCopy.def  CatchCopy.pro  ClassFactory.cpp  ClassFactory.h  ClientCatchcopy.cpp  ClientCatchcopy.h  DDShellExt.cpp  DDShellExt.h  Deque.cpp  Deque.h  Reg.cpp  Reg.h  Variable.h  resource.h
docs/: ultracopier.1
file-manager/: HOOK.md  dolphin-0001-register-show-all-places-in-actioncollection.patch  dolphin-0002-add-ultracopier-advanced-copier-support-to-paste.patch  libfm-qt-uc.patch  pcmanfm-qt-uc-0.14.patch  pcmanfm-qt-uc-0.16.patch  pcmanfm-qt-uc-1.12.patch  pcmanfm-qt.txt
file-manager/gentoo/: README.md  install.sh
file-manager/gentoo/servicemenus/: ultracopier-cp-clipboard.desktop  ultracopier-cp.desktop  ultracopier-mv-clipboard.desktop  ultracopier-mv.desktop
interface/: FacilityInterface.h  OptionInterface.h  PathTreeStr.cpp  PathTreeStr.h  PluginInterface_CopyEngine.h  PluginInterface_Listener.h  PluginInterface_PluginLoader.h  PluginInterface_SessionLoader.h  PluginInterface_Themes.h
lib/qt-tar-xz/: QTarDecode.cpp  QTarDecode.h  QXzDecode.cpp  QXzDecode.h  QXzDecodeThread.cpp  QXzDecodeThread.h  xz.h  xz_config.h  xz_crc32.c  xz_dec_lzma2.c  xz_dec_stream.c  xz_lzma2.h
libfm-qt-ultracopier/: README  libfm-qt-ultracopier.pro  utilities.cpp  utilities.h
libogg/: bitwise.c  config_types.h  framing.c  os_types.h
libopus/celt/: bands.c  celt_decoder.c  celt_encoder.c  float_cast.h
libopus/silk/: CNG.c  HP_variable_cutoff.c  LPC_analysis_filter.c  NLSF_encode.c  NSQ.c  NSQ_del_dec.c  PLC.c  VAD.c  control_codec.c  dec_API.c  decode_core.c  decode_frame.c  enc_API.c  encode_pulses.c  init_encoder.c  macros.h  resampler_down2_3.c  resampler_private_IIR_FIR.c  resampler_private_down_FIR.c  stereo_LR_to_MS.c
libopus/silk/fixed/: apply_sine_window_FIX.c  autocorr_FIX.c  burg_modified_FIX.c  encode_frame_FIX.c  find_LPC_FIX.c  find_LTP_FIX.c  find_pitch_lags_FIX.c  find_pred_coefs_FIX.c  k2a_FIX.c  k2a_Q16_FIX.c  main_FIX.h  noise_shape_analysis_FIX.c  pitch_analysis_core_FIX.c  process_gains_FIX.c  residual_energy_FIX.c  schur64_FIX.c  schur_FIX.c  vector_ops_FIX.c
libopus/silk/float/: LPC_inv_pred_gain_FLP.c  SigProc_FLP.h  autocorrelation_FLP.c  burg_modified_FLP.c  encode_frame_FLP.c  find_LPC_FLP.c  find_LTP_FLP.c  find_pitch_lags_FLP.c  main_FLP.h  noise_shape_analysis_FLP.c  pitch_analysis_core_FLP.c  process_gains_FLP.c  sort_FLP.c  structs_FLP.h
libopus/src/: analysis.c  analysis.h  mapping_matrix.c  mlp.c  opus_compare.c  opus_decoder.c  opus_encoder.c  opus_multistream.c  opus_multistream_decoder.c  opus_multistream_encoder.c  opus_private.h  opus_projection_decoder.c  opus_projection_encoder.c  repacketizer.c
little/: OptionsEngineLittle.h  main-little.cpp
opusfile/: internal.c  internal.h  opusfile.c  opusfile.h
other-pro/: CMakeLists.txt  OptionsEngineLittle.cpp  static.pro  supercopier-core.pro  supercopier-static.pro  ultracopier-core.pro  ultracopier-little-random.pro  ultracopier-little.pri  ultracopier-little.pro  ultracopier-static.pro
other-pro/android/: AndroidManifest.xml  build.sh  oldAndroidManifest.xml
patch/comercial/: rsync-copy-engine.patch
patch/opensource/: KDE-Ultracopier.patch  options-with-pass.patch
plugins/: README.md  static-plugins-oxygen.qrc  static-plugins-windows.qrc  static-plugins.qrc
plugins-alternative/: static-plugins-supercopier.qrc
plugins-alternative/CopyEngine/Ultracopier-0.2/: AvancedQFile.cpp  AvancedQFile.h  Environment.h  StructEnumDefinition_CopyEngine.h  Variable.h  copyEngine.cpp  copyEngine.h  copyEngine.pro  debugDialog.cpp  debugDialog.h  (+23 more)
plugins/CopyEngine/: README.md
plugins/Languages/: README.md
plugins/Listener/: README.md
plugins/PluginLoader/: README.md
plugins/SessionLoader/: README.md
plugins/Themes/: README.md
resources/: finish.opus  qt.conf  resources-windows-qt-plugin.qrc  resources-windows.rc  resources.qrc  supercopier.icns  ultracopier-resources.qrc  ultracopier-resources_unix.qrc  ultracopier-resources_windows.qrc  ultracopier.desktop  ultracopier.exe.amd64.manifest  ultracopier.exe.x86.manifest  ultracopier.icns
test/: button.xcf
test-client-catchcopy/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resources-windows.rc  resources.qrc  test-client-catchcopy.pro
test-client-catchcopy/catchcopy-api-0002/: ClientCatchcopy.cpp  ServerCatchcopy.cpp  documentation.dox
test/chartarea/: MainWindow.cpp  MainWindow.h  MainWindow.ui  chartarea.pro  widget.cpp  widget.h
test/darkbutton/: DarkButton.cpp  DarkButton.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  darkbutton.pro  res.qrc
test/progressbardark/: MainWindow.cpp  MainWindow.h  ProgressBarDark.cpp  ProgressBarDark.h  progressbardark.pro  res.qrc
test/radialmap/: Config.cpp  Config.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  radialmap.pro
tools/doc/: Doxyfile  Doxyfile-plugin-template  footer.html
tools/scripts/: UltraCP  UltraMV
tools/to-pack/: 1-pre-send.sh  1-update-translation.sh  2-compil-wine32.sh  2-compil-wine64.sh  2-send-sources.sh  3-compil-linux.sh  3-compil-mac.sh  3-prepare32.sh  3-prepare64.sh  4-clean-all.sh  4-upload.sh  5-upload.sh  6-sendmail.sh  grouped.sh  old-3-compil-linux.sh  test.sh
tools/unit-tester/: copyEngine.cpp  copyEngine.h  copyEngineUnitTester.cpp  copyEngineUnitTester.h  main.cpp  unit-tester.pro
(+1047 files in other folders)
